[gd_scene load_steps=2 format=3 uid="uid://mtwb30anmli5"]

[ext_resource type="Script" uid="uid://b3j2fb133ojmf" path="res://PauseMenu.gd" id="1_0yq8s"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0yq8s")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[node name="OptionsMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="OptionsMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="OptionsMenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="DisplayModeContainer" type="HBoxContainer" parent="OptionsMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="DisplayModeLabel" type="Label" parent="OptionsMenu/CenterContainer/VBoxContainer/DisplayModeContainer"]
layout_mode = 2
text = "Display Mode:"

[node name="DisplayModeOption" type="OptionButton" parent="OptionsMenu/CenterContainer/VBoxContainer/DisplayModeContainer"]
layout_mode = 2

[node name="ResolutionContainer" type="HBoxContainer" parent="OptionsMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="OptionsMenu/CenterContainer/VBoxContainer/ResolutionContainer"]
layout_mode = 2
text = "Resolution:"

[node name="ResolutionOption" type="OptionButton" parent="OptionsMenu/CenterContainer/VBoxContainer/ResolutionContainer"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="OptionsMenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BackButton" type="Button" parent="OptionsMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Back"
